@@ -1,7 +1,8 @@
-# Generated by using Rcpp::compileAttributes() -> do not edit by hand
-# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand Generator
+# token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 pointsInPolygon_core <- function(points, polygon) {
-    .Call('_graphicsutils_pointsInPolygon_core', PACKAGE = 'graphicsutils', points, polygon)
+    .Call("_graphicsutils_pointsInPolygon_core", PACKAGE = "graphicsutils", points, 
+        polygon)
 }
 
