@@ -9,6 +9,7 @@
 #' @param to the angles, expressed in radians, to which circles are drawn.
 #' @param incr increments between two points to be linked (expressed in radians).
 #' @param pie a logical. If \code{TRUE}, end points are linked with the center of the circle (default is set to \code{FALSE}).
+#' @param clockwise a logical. Shall slices be drawn clockwise?
 #' @param add a logical. Should the circles be added on the current plot?
 #' @param ... additional arguments to be passed to \code{\link[graphics]{polygon}} function.
 #'
@@ -34,8 +35,9 @@
 #'
 #' # Example 2:
 #' plot0()
-#' circles(x=-.5, radi=0.5, from=0.5*pi, to=0.25*pi)
-#' circles(x=.5, radi=0.5, from=0.5*pi, to=0.25*pi, pie=TRUE)
+#' circles(x=-.5, radi=0.45, from=0.5*pi, to=0.25*pi)
+#' circles(x=.5, radi=0.45, from=0.5*pi, to=0.25*pi, pie=TRUE)
+#' circles(x=.5, y = -.5, radi=0.45, from=0.5*pi, to=0.25*pi, pie=TRUE, clockwise = TRUE)
 #'
 #' # Example 3:
 #' plot0()
@@ -45,10 +47,12 @@
 #' plot0(x=c(-2,2),y=c(-2,2), asp=1)
 #' circles(x=c(-1,1),c(1,1,-1,-1),from=pi*seq(0.25,1,by=0.25),to=1.25*pi, col=2, border=4, lwd=3)
 
-circles <- function(x, y = x, radi = 1, from = 0, to = 2 * pi, incr = 0.01, pie = FALSE, 
-    add = TRUE, ...) {
-    # 
-    if (!isTRUE(add)) 
+circles <- function(x, y = x, radi = 1, from = 0, to = 2*pi, incr = 0.01, pie = FALSE,
+    clockwise = FALSE, add = TRUE, ...) {
+    #
+    pipi <- 2*pi
+    #
+    if (!isTRUE(add))
         plot0()
     # format checking / adjusting vectors sizes
     matx <- as.matrix(x)
@@ -59,33 +63,39 @@ circles <- function(x, y = x, radi = 1, from = 0, to = 2 * pi, incr = 0.01, pie 
     argo <- list(x, y, radi, from, to)
     sz <- max(sapply(argo, length))
     for (i in 1L:nbarg) assign(argn[i], rep_len(argo[[i]], sz))
-    # draw the circle
+    # drawing circles
     out <- list()
     for (i in 1L:sz) {
-        ## --- sequence to draw the circle
-        if (abs(to[i] - from[i]) >= (2 * pi)) {
-            to[i] <- 2 * pi
+        ## --- angles sequence
+        if (abs(to[i] - from[i]) >= (pipi)) {
+            to[i] <- pipi
             from[i] <- 0
         } else {
-            if ((to[i] > from[i]) & (to[i]%%(2 * pi) == 0)) 
-                to[i] <- 2 * pi
-            to[i] <- to[i]%%(2 * pi)
-            from[i] <- from[i]%%(2 * pi)
-            if (to[i] < from[i]) 
-                to[i] <- to[i] + 2 * pi
+            if ((to[i] > from[i]) & (to[i]%%(pipi) == 0))
+                to[i] <- pipi
+            to[i] <- to[i]%%(pipi)
+            from[i] <- from[i]%%(pipi)
+            if (to[i] < from[i])
+                to[i] <- to[i] + pipi
         }
-        ## 
-        sqc <- seq(from[i], to[i], by = incr)
+        ##
+        if (!clockwise) {
+          sqc <- seq(from[i], to[i], by = incr)
+        } else {
+          sqc <- seq(from[i], 2*from[i] - to[i], by = -incr)
+        }
+
         if (!pie) {
             xout <- x[i] + radi[i] * cos(sqc)
             yout <- y[i] + radi[i] * sin(sqc)
-            graphics::polygon(xout, yout, ...)
         } else {
             xout <- x[i] + c(0, radi[i] * cos(sqc), 0)
             yout <- y[i] + c(0, radi[i] * sin(sqc), 0)
-            graphics::polygon(xout, yout, , ...)
         }
+
+        graphics::polygon(xout, yout, ...)
         out[[i]] <- data.frame(x = xout, y = yout)
     }
+
     invisible(out)
 }
